# kidtube

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: main.py  ui.py
app/api/: router.py  routes_admin_settings.py  routes_categories.py  routes_channel_lookup.py  routes_channels.py  routes_discord.py  routes_feed.py  routes_health.py  routes_kids.py  routes_logs.py  routes_parent_controls.py  routes_playback.py  routes_requests.py  routes_search.py  routes_session.py  routes_stats.py  routes_sync.py  routes_videos.py
app/core/: config.py  logging.py  request_context.py  version.py
app/db/: migrate.py  models.py  paths.py  session.py
app/services/: daily_stats.py  email_notify.py  limits.py  parent_controls.py  security.py  sync.py  youtube.py  youtube_ytdlp.py
app/static/: app.js  approvals.js  channel.js  channels.js  dashboard.js  kids.js  sync.js  (+6 more)
deploy/: docker-compose.simple.yml  docker-compose.traefik.yml
tests/: conftest.py  test_backup_tool.py  test_categories_api.py  test_channel_lookup_api.py  test_db_init.py  test_db_paths.py  test_discord_approvals.py  test_feed.py  test_health.py  test_kids_api.py  test_limits_api.py  test_logs_stats_api.py  test_parent_controls.py  test_phase12_api.py  test_phase1_access_approvals_heartbeat.py  test_request_id.py  test_routes.py  test_session_api.py  test_startup_db_permissions.py  test_sync.py  test_sync_api.py  test_ui.py  test_videos_api.py  test_youtube_service.py
(+32 files in other folders)
