[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kidtube"
version = "0.1.0"
description = "KidTube Phase 1 FastAPI service"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [{name = "KidTube Contributors"}]
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlmodel>=0.0.22,<0.0.23",
  "pydantic-settings>=2.6.0,<3.0.0",
  "PyNaCl>=1.5.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "jinja2>=3.1.4,<4.0.0",
  "python-multipart>=0.0.7",
  "itsdangerous>=2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
  "ruff>=0.8.0,<1.0.0",
  "black>=24.10.0,<25.0.0"
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
"app/api/*.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py312"]
